fixed spacing on mobile

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -33,6 +33,10 @@
   text-decoration: none;
 }
 
+.external-link:hover {
+  color: #dbd8d8;
+}
+
 .divider {
   padding-left: 5px;
 }
