--- a/src/styles.scss
+++ b/src/styles.scss
@@ -58,19 +58,11 @@ body {
   color: $opposite-font-color;
 }
 
-@media (min-width: 320px) and (max-width: 375px) {
+@media screen and (min-width: 0px) and (max-width: 767px) {
   .content-container-card {
-    // padding-left: 6px;
-    // padding-right: 0px;
-    font-size: 16px;
-    width: 100%;
-  }
-}
-@media (min-width: 390px) and (max-width: 844px) {
-  .content-container-card {
-    // padding-left: 6px;
-    // padding-right: 0px;
-    font-size: 16px;
+    padding-left: 10px;
+    padding-right: 2px;
+    font-size: 15px;
     width: 100%;
   }
 }
